--- a/styles/index.css
+++ b/styles/index.css
@@ -7,13 +7,23 @@ html, body {
   height: 100%;
   width: 100%; }
 
+header {
+  z-index: 3; }
+
+main {
+  z-index: 1; }
+
+footer {
+  z-index: 2; }
+
 html body {
   display: flex;
   flex-direction: column; }
   html body header {
     flex: 0 0 auto;
     height: 100px;
-    background: #1ba7d6; }
+    background: #1ba7d6;
+    box-shadow: 0px -5px 15px 5px black; }
     html body header .centerer {
       display: inline-flex;
       flex-direction: column;
@@ -26,19 +36,70 @@ html body {
         color: white;
         font-family: 'Ubuntu', monospace; }
   html body .content {
-    flex: 1 0 auto; }
+    flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+    html body .content div.hoverbox {
+      position: fixed;
+      width: 20%;
+      border: 2px solid grey;
+      border-radius: 5px;
+      background: #cccccc;
+      padding: 3px;
+      opacity: 0;
+      transition: opacity 1s;
+      transition-timing-function: ease; }
+      html body .content div.hoverbox .caret {
+        position: absolute;
+        top: 8px;
+        background: #cccccc;
+        width: 10px;
+        height: 10px;
+        transform: rotate(45deg); }
+    html body .content div.hoverbox.left {
+      left: 2.5%; }
+      html body .content div.hoverbox.left .caret {
+        border-top-right-radius: 4px;
+        right: -7px;
+        border-top: 2px solid grey;
+        border-right: 2px solid grey; }
+    html body .content div.hoverbox.right {
+      right: 2.5%; }
+      html body .content div.hoverbox.right .caret {
+        border-bottom-left-radius: 4px;
+        left: -7px;
+        border-bottom: 2px solid grey;
+        border-left: 2px solid grey; }
     html body .content main {
+      flex: 1 1 auto;
       height: 100%;
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      right: 0px;
-      bottom: 0px;
-      margin-left: 200px;
-      margin-right: 200px; }
+      background: #fafafa;
+      box-shadow: 0px 0px 20px 10px #fafafa;
+      margin-left: 25%;
+      margin-right: 25%;
+      padding-top: 5px;
+      padding-bottom: 5px; }
+      html body .content main #articleheader {
+        margin: 10px;
+        text-align: center; }
+      html body .content main #articleimage {
+        width: 75%;
+        padding-top: 20px;
+        padding-left: 12.5%;
+        padding-right: 12.5%;
+        padding-bottom: 20px; }
+      html body .content main p.articletext {
+        text-indent: 30px;
+        text-align: justify; }
+        html body .content main p.articletext + p.articletext {
+          margin-top: 20px; }
+        html body .content main p.articletext:last-child {
+          margin-bottom: 30px; }
   html body footer {
     flex: 0 0 auto;
     height: 50px;
-    background: #1ba7d6; }
+    background: #1ba7d6;
+    box-shadow: 0px 5px 15px 5px black; }
 
 /*# sourceMappingURL=index.css.map */
