--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -16,6 +16,10 @@ html, body {
 
 }
 
+header { z-index: 3; }
+main { z-index: 1; }
+footer { z-index: 2; }
+
 html {
 
 	body {
@@ -28,6 +32,7 @@ html {
 			flex: 0 0 auto;
 			height: 100px;
 			background: $blue;
+			box-shadow: 0px -5px 15px 5px black;
 			
 			.centerer {
 				
@@ -53,22 +58,129 @@ html {
 		.content {
 		
 			flex: 1 0 auto;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			
+			div.hoverbox {
+				
+				position: fixed;
+				width: 20%;
+				border: 2px solid grey;
+				border-radius: 5px;
+				background: #cccccc;
+				padding: 3px;
+				opacity: 0;
+				transition: opacity 1s;
+				transition-timing-function: ease;
+				
+				.caret {
+					
+					position: absolute;
+					top: 8px;
+					background: #cccccc;
+					width: 10px;
+					height: 10px;
+					transform: rotate(45deg);
+					
+				}
+				
+			}
+			
+			div.hoverbox.left {
+				
+				left: 2.5%;
+				
+				.caret {
+					
+					border-top-right-radius: 4px;
+					right: -7px;
+					border-top: 2px solid grey;
+					border-right: 2px solid grey;
+				
+				}
+			
+			}
+			
+			div.hoverbox.right {
+				
+				right: 2.5%;
+				
+				.caret {
+					
+					border-bottom-left-radius: 4px;
+					left: -7px;
+					border-bottom: 2px solid grey;
+					border-left: 2px solid grey;
+					
+				}
+				
+			}
 			
 			main {
 			
+				flex: 1 1 auto;
 				height: 100%;
-				position: absolute;
-				top: 0px;
-				left: 0px;
-				right: 0px;
-				bottom: 0px;
 				
-				$margin: 200px;
+				$mainWhite: 250;
+				background: rgb($mainWhite, $mainWhite, $mainWhite);
+				box-shadow: 0px 0px 20px 10px rgb($mainWhite, $mainWhite, $mainWhite);
+				
+				$mainMargin: 25%;
 				margin: {
 				
-					left: $margin;
-					right: $margin;
+					left: $mainMargin;
+					right: $mainMargin;
 				
+				}
+				
+				$mainPadding: 5px;
+				padding: {
+					
+					top: $mainPadding;
+					bottom: $mainPadding;
+					
+				}
+				
+				#articleheader {
+				
+					margin: 10px;
+					text-align: center;
+				
+				}
+				
+				#articleimage {
+				
+					$articleImageWidth: 75%;
+					width: $articleImageWidth;
+					padding: {
+					
+						top: 20px;
+						left: (100% - $articleImageWidth) / 2;
+						right: (100% - $articleImageWidth) / 2;
+						bottom: 20px;
+						
+					}
+				
+				}
+				
+				p.articletext {
+				
+					text-indent: 30px;
+					text-align: justify;
+					
+					& + p.articletext {
+					
+						margin-top: 20px;
+					
+					}
+					
+					&:last-child {
+					
+						margin-bottom: 30px;
+					
+					}
+					
 				}
 			
 			}
@@ -80,6 +192,7 @@ html {
 			flex: 0 0 auto;
 			height: 50px;
 			background: $blue;
+			box-shadow: 0px 5px 15px 5px black;
 		
 		}
 	
