Finalized site for presentation.

--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -52,6 +52,13 @@ html {
 				}
 			
 			}
+			
+			h3 {
+			
+				color: white;
+				font-family: 'Ubuntu', monospace;
+			
+			}
 		
 		}
 		
@@ -65,7 +72,7 @@ html {
 			div.hoverbox {
 				
 				position: fixed;
-				width: 20%;
+				width: 15%;
 				border: 2px solid grey;
 				border-radius: 5px;
 				background: #cccccc;
@@ -85,34 +92,40 @@ html {
 					
 				}
 				
-			}
-			
-			div.hoverbox.left {
-				
-				left: 2.5%;
-				
-				.caret {
+				&.left {
 					
-					border-top-right-radius: 4px;
-					right: -7px;
-					border-top: 2px solid grey;
-					border-right: 2px solid grey;
+					left: 2.5%;
+					
+					.caret {
+						
+						border-top-right-radius: 4px;
+						right: -7px;
+						border-top: 2px solid grey;
+						border-right: 2px solid grey;
+						
+					}
 				
 				}
-			
-			}
-			
-			div.hoverbox.right {
 				
-				right: 2.5%;
+				&.right {
+					
+					right: 2.5%;
+					
+					.caret {
+						
+						border-bottom-left-radius: 4px;
+						left: -7px;
+						border-bottom: 2px solid grey;
+						border-left: 2px solid grey;
+						
+					}
+					
+					p {
+						
+						text-indent: 7px;
+						
+					}
 				
-				.caret {
-					
-					border-bottom-left-radius: 4px;
-					left: -7px;
-					border-bottom: 2px solid grey;
-					border-left: 2px solid grey;
-					
 				}
 				
 			}
@@ -126,7 +139,7 @@ html {
 				background: rgb($mainWhite, $mainWhite, $mainWhite);
 				box-shadow: 0px 0px 20px 10px rgb($mainWhite, $mainWhite, $mainWhite);
 				
-				$mainMargin: 25%;
+				$mainMargin: 20%;
 				margin: {
 				
 					left: $mainMargin;
@@ -145,17 +158,49 @@ html {
 				#articleheader {
 				
 					margin: 10px;
-					text-align: center;
+					margin-top: 30px;
+					//text-align: center;
 				
 				}
 				
-				#articleimage {
+				#author {
+					
+					margin: {
+					
+						left: 10px;
+						right: 10px;
+						bottom: 10px;
+						
+					}
 				
-					$articleImageWidth: 75%;
+					&:before {
+					
+						content: "By: ";
+					
+					}
+				
+				}
+				
+				#date {
+					
+					font-size: 12px;
+					
+					margin: {
+						
+						left: 10px;
+						right: 10px;
+						bottom: 10px;
+						
+					}
+					
+				}
+				
+				.articleimage {
+				
+					$articleImageWidth: 94%;
 					width: $articleImageWidth;
 					padding: {
-					
-						top: 20px;
+						
 						left: (100% - $articleImageWidth) / 2;
 						right: (100% - $articleImageWidth) / 2;
 						bottom: 20px;
@@ -164,10 +209,28 @@ html {
 				
 				}
 				
+				#trenchcoatlady {
+					
+					padding-top: 20px;
+					
+					$articleImageWidth: 65%;
+					width: $articleImageWidth;
+					padding: {
+						
+						left: (100% - $articleImageWidth) / 2;
+						right: (100% - $articleImageWidth) / 2;
+						top: 20px;
+						bottom: 20px;
+						
+					}
+					
+				}
+				
 				p.articletext {
 				
 					text-indent: 30px;
 					text-align: justify;
+					line-height: 1.4;
 					
 					& + p.articletext {
 					
@@ -179,6 +242,29 @@ html {
 					
 						margin-bottom: 30px;
 					
+					}
+					
+					span {
+					
+						background: #EAEAEA;
+					
+					}
+					
+				}
+				
+				#clickbaitlinks {
+				
+					margin-top: 20px;
+					
+					$articleImageWidth: 80%;
+					width: $articleImageWidth;
+					padding: {
+						
+						left: (100% - $articleImageWidth) / 2;
+						right: (100% - $articleImageWidth) / 2;
+						top: 20px;
+						bottom: 20px;
+						
 					}
 					
 				}
@@ -193,6 +279,17 @@ html {
 			height: 50px;
 			background: $blue;
 			box-shadow: 0px 5px 15px 5px black;
+			
+			h4 {
+				
+				float: right;
+				font-weight: normal;
+				white-space: pre-line;
+				text-align: right;
+				padding: 5px;
+				padding-right: 10px;
+				
+			}
 		
 		}
 	
