--- a/styles/index.css
+++ b/styles/index.css
@@ -35,6 +35,9 @@ html body {
         white-space: pre-line;
         color: white;
         font-family: 'Ubuntu', monospace; }
+    html body header h3 {
+      color: white;
+      font-family: 'Ubuntu', monospace; }
   html body .content {
     flex: 1 0 auto;
     display: flex;
@@ -42,7 +45,7 @@ html body {
     justify-content: center; }
     html body .content div.hoverbox {
       position: fixed;
-      width: 20%;
+      width: 15%;
       border: 2px solid grey;
       border-radius: 5px;
       background: #cccccc;
@@ -57,49 +60,85 @@ html body {
         width: 10px;
         height: 10px;
         transform: rotate(45deg); }
-    html body .content div.hoverbox.left {
-      left: 2.5%; }
-      html body .content div.hoverbox.left .caret {
-        border-top-right-radius: 4px;
-        right: -7px;
-        border-top: 2px solid grey;
-        border-right: 2px solid grey; }
-    html body .content div.hoverbox.right {
-      right: 2.5%; }
-      html body .content div.hoverbox.right .caret {
-        border-bottom-left-radius: 4px;
-        left: -7px;
-        border-bottom: 2px solid grey;
-        border-left: 2px solid grey; }
+      html body .content div.hoverbox.left {
+        left: 2.5%; }
+        html body .content div.hoverbox.left .caret {
+          border-top-right-radius: 4px;
+          right: -7px;
+          border-top: 2px solid grey;
+          border-right: 2px solid grey; }
+      html body .content div.hoverbox.right {
+        right: 2.5%; }
+        html body .content div.hoverbox.right .caret {
+          border-bottom-left-radius: 4px;
+          left: -7px;
+          border-bottom: 2px solid grey;
+          border-left: 2px solid grey; }
+        html body .content div.hoverbox.right p {
+          text-indent: 7px; }
     html body .content main {
       flex: 1 1 auto;
       height: 100%;
       background: #fafafa;
       box-shadow: 0px 0px 20px 10px #fafafa;
-      margin-left: 25%;
-      margin-right: 25%;
+      margin-left: 20%;
+      margin-right: 20%;
       padding-top: 5px;
       padding-bottom: 5px; }
       html body .content main #articleheader {
         margin: 10px;
-        text-align: center; }
-      html body .content main #articleimage {
-        width: 75%;
+        margin-top: 30px; }
+      html body .content main #author {
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-bottom: 10px; }
+        html body .content main #author:before {
+          content: "By: "; }
+      html body .content main #date {
+        font-size: 12px;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-bottom: 10px; }
+      html body .content main .articleimage {
+        width: 94%;
+        padding-left: 3%;
+        padding-right: 3%;
+        padding-bottom: 20px; }
+      html body .content main #trenchcoatlady {
         padding-top: 20px;
-        padding-left: 12.5%;
-        padding-right: 12.5%;
+        width: 65%;
+        padding-left: 17.5%;
+        padding-right: 17.5%;
+        padding-top: 20px;
         padding-bottom: 20px; }
       html body .content main p.articletext {
         text-indent: 30px;
-        text-align: justify; }
+        text-align: justify;
+        line-height: 1.4; }
         html body .content main p.articletext + p.articletext {
           margin-top: 20px; }
         html body .content main p.articletext:last-child {
           margin-bottom: 30px; }
+        html body .content main p.articletext span {
+          background: #EAEAEA; }
+      html body .content main #clickbaitlinks {
+        margin-top: 20px;
+        width: 80%;
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-top: 20px;
+        padding-bottom: 20px; }
   html body footer {
     flex: 0 0 auto;
     height: 50px;
     background: #1ba7d6;
     box-shadow: 0px 5px 15px 5px black; }
+    html body footer h4 {
+      float: right;
+      font-weight: normal;
+      white-space: pre-line;
+      text-align: right;
+      padding: 5px;
+      padding-right: 10px; }
 
 /*# sourceMappingURL=index.css.map */
